css/main.css
/* ... */
/* ---------------------------------------------- */
/* CSS for positioning the overlay image */






.footer {
  padding: 0px 25px;
  /* put everything in one line */
  display: flex;
  /* align items horizentaly */
  justify-content: space-between;
  /* align items vertically */
  align-items: center; 
}

/* fix logo width */
.footer img {
  width: 60px; 
  /* space between logo and h4 */
  margin-right: 10px; 

}

.footer .icons {
  font-size: larger;
  /*icons will grow and take available space */
  flex-grow: 1; 
  /* align icons in center */
  text-align: center; 
}

.footer .icons i {
  /* space between icons */
  margin-right: 10px; 
}


.footer .text {
  /* set text to the right */
  text-align: right; 
}

.logo-and-title {
  /* logo and h4 in a row */
  display: flex; 
 /* items in a line */
  align-items: center;
}


/* add bottom margin */
.footer{
  margin-bottom: 25px; 
}


/* set for media for less 700px*/
@media(max-width: 700px){
  .footer{
    /* display: block; */
    flex-direction: column;
    line-height: 1.5;
    align-items: center;
    justify-content: center;
  }

   /* hide the logo and h4 */
  .footer img,
  .footer h4 {
    display: none;
  }

}
/* I add it becaouse of "one-image"  */
.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* -------------------------------------- */
/* one-image in middle */
.one-center {
  text-align: center; /* Center the content inside the div */
  /* margin: 0 2%; */
  position: relative;
  top:-100px;
  
  /* background-color: blueviolet; */
  /* text-align: left; */
  /* box-shadow: 1px 1 px 20px 1px red; */
}


/* set the size of middle image */
.one-center img{
  width: 60%;
}

/* small screens-middle image */
@media (max-width: 700px) {
  .one-center {
    position: static; /* Reset position to default */
    margin-top: 50px; /* Add margin before the image */
    margin-bottom: 50px; /* Add margin after the image */
    top: 0; /* Ensure top position is 0 */
  }

  /* set the size of middle image -same as "our cakes" size*/
.one-center img{
  width: 90%;
}
}


/* set black line */
.line {
  height: 2px; /* Height of the line */
  background-color: black; /* Color of the line */
  margin-top: 20px; /* Adjust margin as needed */
  width: 50%; /* Half width of the screen */
  margin: 20px auto; /* Center the line horizontally */
}

/* small screens, full width */
@media (max-width: 700px) {
  .line {
    width: 100%; /* Full width of the screen */
  }
}

/* ------------------------------------------ */
/* <!-- products part --> */
 h1{
  font-size: 40px;
  font-weight: 700px;
  color: rgb(97, 95, 95);
  padding-bottom: 20px;
  padding-top: 10px;
}

/* set the color of h1 in banners-advertisment */

.whiteh1{
color: gold;
padding-top: 30px;
}


.row{
  width: 90%;
  max-width: 1170px;
  display: grid;
  place-items: center;
  grid-template-columns: repeat(2, 1fr);
  /* add space */
  grid-gap: 50px;
  overflow-x: hidden;
  padding: 5rem 0;
  margin: 0 auto;
}

.row .imageWrapper{
  overflow: hidden;
}

/* change scale of picture by hovering */
.row .imageWrapper img{
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: 0.3s;
}

.row .imageWrapper:hover img{
  transform: scale(1.25);
}


/* style the content wrapper */
. row .contentWrapper{
  width: 100%;
  display: flex;
  align-items: center;
  padding-left: 30px;
}

/* .row .contentWrapper span.textWrapper{ */
  /* display: block; */
  /* font-size: 20px; */
  /* height: 5rem; */
  /* display: flex; */
  /* justify-content: flex-start; */
  /* align-items: center; */
  /* gap: 15px;
  margin-bottom: 20px; */
/* 
} */

/* .row .contentWrapper span.textWrapper span{
  display: inline-block;
  background: gray;
  width: 70px;
  height: 5px;
} */

/* stylign the content wrappers */
.row .contentWrapper h2{
  font-size: 40px;
  font-weight: 700px;
  color: rgb(97, 95, 95);
  padding-bottom: 20px;
  padding-top: 10px;
}

.row .contentWrapper p{
  font-size: 18px;
  line-height: 30px;
  padding-bottom: 25px;
}

.row .contentWrapper a{
  font-display: inline-blok;
  text-decoration: none;
  /* make it capital */
  text-transform: uppercase;
  background: gold;
  color: black;
  /* chang size */
  padding: 15px;
  /* letter-spacing: 1px; */
  user-select: none;
  
}


/* set advertisment for media for less 700px-@media*/

  @media(max-width: 700px){
    .row{
      grid-template-columns: 1fr;
      /* grid-gap: 50px; */
      width: 90%;
      margin: 0 auto;

    }
    
    /* style the content wrapper */
    . row .contentWrapper{
      padding-left: 8px;
      flex-flow: row wrap;
    }

    /* make image becom first */
    .row .imageWrapper img{
      display: block;
      order: 1;
      width: 100%;
      /* height: 250px; */
    }

    .row .contentWrapper {
      display: block;
      order: 2;
    }
  }


/* Call Us-Advertisment part in home page*/
.call{
  margin: 50px auto;
  width: 100%;
  /* background-image: linear-gradient( rgba(93, 93, 93, 0.7), rgba(243, 180, 7, 0.7)),
  url(../images/banner-small.jpg); */
  
  background-position: center;
  background-size: cover;
  /* border-radius: 10px; */
  text-align: center;
  padding: 100px 0;
  

  background-image: linear-gradient(rgba(1, 3, 14, 0.7), rgba(17, 23, 52, 0.7)), url(../images/banner-small.jpg);
}



/* add margin from left and right for advertisment */
.call h1,
.call p{
  margin-left: 50px;
  margin-right: 50px;
}



/* ---------------------------------------------------------- */
  /* Remove background image for about and contact pages and design it again */
  .header.others {
    background-image: none;
    background-color: rgb(39, 39, 54);
    
     min-height: 10vh;
  }
/* ... */

